# chess_ai_parser_backend

./: README.md
hello_cargo/: Cargo.toml  build.rs
hello_cargo/proto/: stockfishai.proto
hello_cargo/src/: client.rs  main.rs  server.rs
