[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021" 

[[bin]] # Bin to run the gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client 
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.13"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "*"