[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021" 

[[bin]] # Bin to run the gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client 
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chess = "3.2.0"
regex = "1"
anyhow = "1"
tonic-web = "0.12.3"
tower = "0.4"
tower-http = { version = "0.6.2", features = ["cors"] }
http = "0.2" 

[build-dependencies]
tonic-build = "*"
